[tool.poetry]
name = "diffixexplorer"
version = "0.1.0"
description = "Jupyter notebook for testing and evaluation of the Diffix Explorer Api"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
jupyter = "^1.0.0"
plotly = "^4.5.4"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
